Use the input width/height instead of canvas's width/height for tex func validation.

BUG=859400
TEST=webgl_conformance
R=kainino@chromium.org

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I5866530c90b5064177f5890c88eece2fb62f770e
Reviewed-on: https://chromium-review.googlesource.com/1125307
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573072}
Former-commit-id: 3db41c3913fd21440c3f621722f353b2910b3257